# tidal

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  SECURITY.md  VERSION  flake.nix  shell.nix
.github/workflows/: ci.yml  rust.yml
crates/ast/: Cargo.toml
crates/ast/src/: stmt.rs  types.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  run.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: codegen.rs
crates/errors/: Cargo.toml
crates/errors/src/: lib.rs
crates/jit/: Cargo.toml
crates/lexer/: Cargo.toml
crates/lexer/src/: lexer.rs  lib.rs  token.rs
crates/parser/: Cargo.toml
crates/parser/src/: type_checker.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: vm.rs
crates/runtime/src/env/: opt.rs
crates/tidal-api/: Cargo.toml  build.rs
crates/tidal-api/src/: lib.rs
crates/tidal-ast/src/: expr.rs  lib.rs  ops.rs  program.rs  stmt.rs  types.rs
crates/tidal-cli/: Cargo.toml
crates/tidal-cli/src/: cli.rs  main.rs  run.rs
crates/tidal-errors/src/: lib.rs
crates/tidal-jit/: Cargo.toml
crates/tidal-jit/src/: lib.rs
crates/tidal-lexer/: Cargo.toml
crates/tidal-lexer/src/: lexer.rs  lib.rs  token.rs
crates/tidal-parser/: Cargo.toml
crates/tidal-parser/src/: lib.rs  parser.rs  type_checker.rs
crates/tidal-repl/: Cargo.toml
crates/tidal-repl/src/: color.rs  main.rs
crates/tidal-runtime/: Cargo.toml
crates/tidal-runtime/src/: env.rs  lib.rs  value.rs  vm.rs
crates/tidal-vm/: Cargo.toml
crates/tidal-vm/src/: bytecode.rs  codegen.rs  lib.rs
(+1 files in other folders)
