[workspace]
members = [
    "crates/tidal-api"    ,
    "crates/tidal-ast"    ,
    "crates/tidal-errors" ,
    "crates/tidal-lexer"  ,
    "crates/tidal-parser" ,
    "crates/tidal-repl"   ,
    "crates/tidal-runtime",
    "crates/tidal-cli"    ,
    "crates/tidal-jit"    ,
    "crates/tidal-vm"     ,
]
resolver = "2"
